--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <h1>Pomodoro Clock</h1>
             <ul>
-                <li>Settings</li>
+                <li><img id="icone-settings" src="imagens/icone-settings.png" alt="icone-settings"></li>
             </ul>
             
         </nav>
