Update FlexBox containers

--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
     <main>
         <section id="container">
 
-            <button class="tipo-intervalo">Pomodoro</button>
+            <div class="botoes">
+                <button class="tipo-intervalo">Pomodoro</button>
             <button class="tipo-intervalo">Intervalo Curto</button>
             <button class="tipo-intervalo">Intervalo Longo</button>
-            <h2>00:00:00</h2>
-            <button id="iniciar">Iniciar</button>
+            </div>
+            <div class="cronometro">
+                <h2>00:00:00</h2>
+            </div>
+            <div class="botao-iniciar"><button id="iniciar">Iniciar</button></div>
+            
         </section>
+        
 
         <p>Bloco 1</p>
     </main>
