Update palletta colours

--- a/index.html
+++ b/index.html
@@ -18,24 +18,22 @@
         </nav>
     </header>
 
-    <main>
-        <section id="container">
-
-            <div class="botoes">
+    <main id="container">
+            <section class="botoes">
                 <button class="tipo-intervalo">Pomodoro</button>
             <button class="tipo-intervalo">Intervalo Curto</button>
             <button class="tipo-intervalo">Intervalo Longo</button>
-            </div>
-            <div class="cronometro">
+            </section>
+            <section class="cronometro">
                 <h2>00:00:00</h2>
-            </div>
-            <div class="botao-iniciar"><button id="iniciar">Iniciar</button></div>
+            </section>
+            <section class="botao-iniciar"><button id="iniciar">Iniciar</button></section>
             
-        </section>
+        </main>
         
 
-        <p>Bloco 1</p>
-    </main>
+        <section><p>Bloco 1</p></section>
+   
 
     <footer>
         <p><a href="#">@cristiandoring</a></p>
