--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <button class="tipo-intervalo">Intervalo Longo</button>
             </section>
             <section class="cronometro">
-                <h2>00:00:00</h2>
+                <h2 class="relogio">00:00:00</h2>
             </section>
-            <section class="botao-iniciar"><button class="botao" onclick="iniciar()">Iniciar</button>
+            <section class="botao-iniciar"><button class="botao" id="iniciar" onclick="iniciar()">Iniciar</button>
             
                 <button class="botao" onclick="pausar">Pausar </button>
             </section>
