--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
    
 
     <footer>
-        <p><a href="#">@cristiandoring</a></p>
-        <p><a href="#">linkedin</a></p>
+        <p><img src="imagens/logo-instagram.png"    alt="icone-instagram"><a href="https://www.instagram.com/cristian.doring/">@cristiandoring</a></p>
+        <p><img src="imagens/logo-linkedin.webp" alt="logo-linkedin"><a href="https://www.linkedin.com/in/cristian-doring-molon/">Cristian Doring Molon</a></p>
     </footer>
 </body>
 </html>
