Botão iniciar cronômetro

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <button class="tipo-intervalo">Intervalo Longo</button>
             </section>
             <section class="cronometro">
-                <h2 class="relogio">00:00:00</h2>
+                <h2 id="relogio">00:50:00</h2>
             </section>
             <section class="botao-iniciar"><button class="botao" id="iniciar" onclick="iniciar()">Iniciar</button>
             
-                <button class="botao" onclick="pausar">Pausar </button>
+                <button class="botao" onclick="pausar()">Pausar </button>
             </section>
             
         </main>
