função pausar e reiniciar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main id="container">
             <section class="botoes">
-                <button class="tipo-intervalo">Pomodoro</button>
+            <button class="tipo-intervalo" id="pomodoro" onclick="reiniciar()">Pomodoro</button>
             <button class="tipo-intervalo">Intervalo Curto</button>
             <button class="tipo-intervalo">Intervalo Longo</button>
             </section>
