--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <main id="container">
             <section class="botoes">
             <button class="tipo-intervalo" id="pomodoro" onclick="reiniciar()">Pomodoro</button>
-            <button class="tipo-intervalo">Intervalo Curto</button>
-            <button class="tipo-intervalo">Intervalo Longo</button>
+            <button class="tipo-intervalo" id="intervalo-curto" onclick="reiniciar_intervalo_curto()">Intervalo Curto </button>
+            <button class="tipo-intervalo" id="intervalo-curto" onclick="reiniciar_intervalo_longo()">Intervalo Longo</button>
             </section>
             <section class="cronometro">
                 <h2 id="relogio">00:50:00</h2>
