Função para passar os intervalos quando clicado no botão next

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <section class="botao-iniciar"><button class="botao" id="iniciar" onclick="iniciar()">Iniciar</button>
             
                 <button class="botao" onclick="pausar()">Pausar </button>
+            <img class="botao-next" src="imagens/botao-next.png" alt="botao-next" onclick="passar_intervalo()">
             </section>
             
         </main>
