--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <h1>Pomodoro Clock</h1>
             <ul>
-                <li><img id="icone-settings" src="imagens/icone-settings.png" alt="icone-settings"></li>
+                <a href="settings.html"><li><img id="icone-settings" src="imagens/icone-settings.png" alt="icone-settings"></li></a>
             </ul>
             
         </nav>
