--- a/settings.html
+++ b/settings.html
@@ -12,7 +12,7 @@
         <form action="#" method="post">
             <a href="index.html"><img id="botao-fechar" src="imagens/botao-fechar.png" alt="botão fechar"></a>
 
-            
+
             <section class="borda">
                 <label for="tempo-pomodoro">Tempo do Pomodoro</label>
             <input type="number" value="50" placeholder="Digite o tempo do pomodoro">
@@ -28,7 +28,7 @@
             <input type="number" value="15" placeholder="Digite o tempo do intervalo longo">
             </section>
 
-            <input type="submit" value="Salvar">
+            <input type="submit" value="Salvar" id="botao-salvar">
         </form>
     </main>
 </body>
