--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <header>
         <nav>
             <h1>Pomodoro Clock</h1>
+
+
+            <!--
+            Habilita segunda página com as configurações de tempo dos intervalos
             <ul>
                 <a href="settings.html"><li><img id="icone-settings" src="imagens/icone-settings.png" alt="icone-settings"></li></a>
             </ul>
+            
+            -->
             
         </nav>
     </header>
